# LibreLector

./: .gitattributes  .gitignore  CONTEXT.md  INSTALL.md  README.md  build.sh  pyproject.toml  requirements.txt  setup.py
docs/: GUIDE_UTILISATEUR.md
packaging/: build_deb.sh  install
packaging/debian/DEBIAN/: conffiles  control  postinst  postrm
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/librelector/: __init__.py  main.py
src/librelector/api/: app.py  ws_manager.py
src/librelector/api/routers/: bookmarks.py  library.py  notes.py  reader.py  settings.py
src/librelector/core/: __init__.py  player.py  pronunciation.py
src/librelector/data/: library.py  models.py
src/librelector/document/: __init__.py  base.py  epub_doc.py  factory.py  fb2_doc.py  pdf_doc.py  txt_doc.py
src/librelector/epub/: parser.py
src/librelector/tts/: __init__.py  base.py  factory.py  piper.py  speech_dispatcher.py
src/librelector/ui/: application.py  library_view.py  reader_view.py  window.py
tests/: test_document_parsers.py  test_epub_parser.py  test_library.py  test_notes.py  test_pronunciation.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/api/: client.ts
ui/src/components/Export/: ExportModal.tsx
ui/src/components/Help/: HelpModal.tsx
ui/src/components/Notes/: NoteDialog.tsx  NotesPanel.tsx
ui/src/hooks/: useWebSocket.ts
ui/src/store/: useStore.ts
(+44 files in other folders)
