[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "librelector"
version = "0.1.0"
description = "Lecteur EPUB open-source avec TTS neuronal offline pour Linux"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.10"
dependencies = [
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "nltk>=3.8",
    "pydub>=0.25",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23", "ruff>=0.1"]

[project.scripts]
librelector = "librelector.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
